--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@nivo/geo": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
+    "axios": "^1.3.4",
     "chart.js": "^3.9.1",
-    "yup": "^1.0.2",
     "formik": "^2.2.9",
-    "react-pro-sidebar": "^1.0.0",
-    "react-chartjs-2": "^4.3.1",
-    "react-router-dom": "^6.8.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.0.0",
+    "react-router-dom": "^6.8.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
