--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "mangatheque-dashboard",
+  "name": "mangatech-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "@fullcalendar/timegrid": "^6.1.4",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
+    "@mui/types": "^7.2.3",
     "@mui/x-data-grid": "^6.0.0",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
@@ -36,9 +37,10 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0"
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
   }
 }
