--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.11.11",
     "@mui/types": "^7.2.3",
     "@mui/x-data-grid": "^6.0.0",
+    "@mui/x-date-pickers": "^6.0.4",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/geo": "^0.80.0",
@@ -28,6 +29,7 @@
     "@nivo/pie": "^0.80.0",
     "axios": "^1.3.4",
     "chart.js": "^3.9.1",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
