--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dayjs": "^1.11.7",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
